akc/issue-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-mongo-deployment
  labels:
    app: issue-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issue-mongodb
  template:
    metadata:
      labels:
        app: issue-mongodb
    spec:
      containers:
        - name: issue-mongodb
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: issue-db
spec:
  type: ClusterIP
  selector:
    app: issue-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
