akc/sprint-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sprint-mongo-deployment
  labels:
    app: sprint-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprint-mongodb
  template:
    metadata:
      labels:
        app: sprint-mongodb
    spec:
      containers:
        - name: sprint-mongodb
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: sprint-db
spec:
  selector:
    app: sprint-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
