akc/sprint-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sprintapi-deployment
  labels:
    app: sprintapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprintapi
  template:
    metadata:
      labels:
        app: sprintapi
    spec:
      containers:
        - name: sprintapi
          image: milankosteracr.azurecr.io/sprint-service:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sprintapi-service
spec:
  type: NodePort
  selector:
    app: sprintapi
  ports:
    - protocol: TCP
      port: 80
