akc/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /sprints
        pathType: Prefix
        backend:
          service:
            name: sprintapi-service
            port:
              number: 80
      - path: /issues
        pathType: Prefix
        backend:
          service:
            name: issueapi-service
            port:
              number: 80
